[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["moh-ash96 <moh.ash96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
sklearn = "^0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
